ifcc-test-output/--testfiles-TestsOK-Invalid-4_syntax_error/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:18: error: expected ‘;’ before ‘}’ token
    2 |         return 12
      |                  ^
      |                  ;
    3 | }
      | ~                 

exit status: 1
